# github-sync

./: .gitignore  CONTRIBUTING.md  README.md
github-sync/: Cargo.toml  LICENSE
github-sync/install/: github-sync.service  uninstall.sh
github-sync/src/: cli.rs  config.rs  git.rs  github.rs  logger.rs  main.rs
github-sync/src/commands/: logs.rs  push.rs  start.rs
install/: install.sh
install/windows/: github-sync.rs  install.ps1  uninstall.ps1
jugaad/: Cargo.toml
jugaad/src/: main.rs
src/: error.rs  logger.rs  main.rs  watcher.rs
src/commands/: config.rs  mod.rs  pull.rs  status.rs  stop.rs
