[package]
name = "github-sync"
version = "0.1.0"
edition = "2024"
description = "Two-way file synchronization using Git"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "ghs"
path = "src/main.rs"

[[bin]]
name = "github-sync-service"
path = "install/windows/github-sync.rs"
required-features = ["windows-service"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
notify = "8.0.0"
git2 = "0.18.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
octocrab = "0.32"
tokio = { version = "1.36", features = ["full"] }
home = "0.5.9"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-service = { version = "0.6", optional = true }
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Services", "Win32_Security"] }

[features]
windows-service = ["dep:windows-service"]

[dev-dependencies]
tempfile = "3.10.1"
